@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2024 THALES GLOBAL SERVICES.
+ * Copyright (c) 2009, 2024 THALES GLOBAL SERVICES and others.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -15,16 +15,14 @@ package org.eclipse.sirius.ecore.extender.business.internal.permission;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.concurrent.ConcurrentMap;
+import java.util.Set;
+import java.util.WeakHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
 
 import org.eclipse.emf.ecore.EObject;
 import org.eclipse.emf.ecore.resource.ResourceSet;
 import org.eclipse.sirius.ecore.extender.business.api.permission.IAuthorityListener;
 import org.eclipse.sirius.ecore.extender.business.api.permission.IPermissionAuthority;
-
-import com.google.common.collect.MapMaker;
 
 /**
  * A basic permission authority which will manage a list of listeners.
@@ -40,7 +38,7 @@ public abstract class AbstractPermissionAuthority implements IPermissionAuthorit
     protected List<IAuthorityListener> listeners = new CopyOnWriteArrayList<IAuthorityListener>();
 
     /** the locked objects. */
-    protected ConcurrentMap<Object, Object> lockedObjects = new MapMaker().concurrencyLevel(4).weakKeys().makeMap();
+    protected Set<Object> lockedObjects = Collections.newSetFromMap(new WeakHashMap<Object, Boolean>()); 
 
     /**
      * Check if an object is locked or not.
@@ -50,7 +48,7 @@ public abstract class AbstractPermissionAuthority implements IPermissionAuthorit
      * @return <code>true</code> if is locked, <code>false</code> otherwise
      */
     protected boolean isLocked(final EObject eObject) {
-        return lockedObjects.containsKey(eObject);
+        return lockedObjects.contains(eObject);
     }
 
     /**
@@ -60,7 +58,7 @@ public abstract class AbstractPermissionAuthority implements IPermissionAuthorit
      *            the locked instance
      */
     protected void storeAsLockedAndNotify(final EObject eObject) {
-        lockedObjects.put(eObject, true);
+        lockedObjects.add(eObject);
         for (IAuthorityListener listener : listeners) {
             listener.notifyIsLocked(eObject);
         }
@@ -68,8 +66,7 @@ public abstract class AbstractPermissionAuthority implements IPermissionAuthorit
 
     @Override
     public List<EObject> getLockedObjects() {
-        List<EObject> lockedEObjects = lockedObjects.keySet().stream().filter(EObject.class::isInstance).map(EObject.class::cast).collect(Collectors.toList());
-        return Collections.unmodifiableList(lockedEObjects);
+        return lockedObjects.stream().filter(EObject.class::isInstance).map(EObject.class::cast).toList();
     }
 
     /**
